# guile-smc

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.org  THANKS  configure.ac  guix.scm  install.sh
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
build-aux/: Makefile.am  pre-inst-env.in
build-aux/am/: Makefile.am  guile.am
build-aux/m4/: Makefile.am
doc/: .gitignore  Makefile.am  api-compiler.texi  api-context-memory.texi  api-context.texi  api-core-context.texi  api-core-log.texi  api-core-stack.texi  api-core-state.texi  api-core-transition.texi  api-fsm.texi  api-puml.texi  api-version.texi  architecture.odg  cli.texi  guile-smc.texi  indices.texi  installation.texi  intro.texi
examples/: puml.scm  pumlpuml.scm  test.scm
examples/compiler/: .gitignore  README.org  context.scm  main.scm  run.scm
examples/parenthesis-check/: .gitignore  Makefile.am  README.org  context.scm  fsm.puml  main.in  main.scm
examples/png/: .gitignore  Makefile.am  README.org  png-signature-checker.in  png-signature-context.scm  png-signature.puml
modules/smc/: .gitignore  Makefile.am  compiler.scm  config.scm.in  fsm.scm  puml-context.scm  puml-fsm.scm  puml.puml  puml.scm  trace-context.scm  trace-fsm.scm  trace.puml  version.scm.in
modules/smc/cli/: Makefile.am  command-compile.scm  command-context.scm  command-profile.scm  command-run.scm  common.scm
modules/smc/compiler/: .gitignore  Makefile.am  config.scm.in  guile-common.scm  guile-standalone.scm  guile.scm
modules/smc/context/: Makefile.am  binary.scm  char-context.scm  char.scm  common.scm  context.scm  port.scm  u8.scm
modules/smc/context/functional/: Makefile.am  char.scm  generic.scm  port.scm  u8.scm
modules/smc/context/oop/: Makefile.am  char.scm  generic.scm  port.scm  u8.scm
modules/smc/core/: Makefile.am  common.scm  config.scm.in  context.scm  log.scm  set.scm  stack.scm  state.scm  transition.scm
modules/smc/guards/: Makefile.am  char.scm
tests/: Makefile.am  cli-profile.scm  cli.scm  common.scm  compiler-guile-standalone.scm  compiler-guile.scm  compiler.scm  context-char.scm  context-common.scm  context-functional-char.scm  context-functional-generic.scm  context-functional-port.scm  context-functional-u8.scm  context-oop-char.scm  context-oop-generic.scm  context-oop-port.scm  context-oop-u8.scm  context-u8.scm  context.scm  core-common.scm  fsm.scm  guards.scm  log.scm  profiler.scm  puml-context.scm  puml.scm  set.scm  stack.scm  state.scm  test-context.scm  transition.scm
utils/: Makefile.am  smc.in
